--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.apk filter=lfs diff=lfs merge=lfs -text
 build/app/outputs/apk/debug/*.apk filter=lfs diff=lfs merge=lfs -text
+build/app/outputs/apk/debug/app-debug.apk filter=lfs diff=lfs merge=lfs -text
