--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ dependencies:
   uuid: ^4.5.0
   fluttertoast: ^8.2.8
   google_nav_bar: ^5.0.6
-  shared_preferences: ^2.3.2  
+  shared_preferences: ^2.3.2
+  easy_date_timeline: ^1.1.3  
 
 dev_dependencies:
   flutter_test:
