--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\skhan\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\flutter
+sdk.dir=/Users/riya/Library/Android/sdk
+flutter.sdk=/Users/riya/development/flutter
 =======
 flutter.buildMode=debug
 flutter.versionName=1.0.0
