--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   fluttertoast: ^8.2.8
   google_nav_bar: ^5.0.6
   shared_preferences: ^2.3.2
-  easy_date_timeline: ^1.1.3  
+  easy_date_timeline: ^1.1.3
+  flutter_social_button: ^1.1.4+1
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +62,11 @@ flutter:
     - assets/logo/
     - assets/icon/
     - assets/images/
+    - assets/group/
+    - assets2/
+    - assets2/ek.jpg
+    - assets2/do.jpg
+
 
   fonts:
     - family: ProximaNova
